--- a/resources/sass/_word_styles.scss
+++ b/resources/sass/_word_styles.scss
@@ -1,3 +1,21 @@
+body {
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+  }
+
+  p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+  }
+}
+
+.p16 {
+  p {
+    font-size: 16px !important;
+  }
+}
+
 .p18 {
   p {
     font-size: 18px !important;
