made cards and styling for posts on index page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10472,6 +10472,39 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.postscontainer .card {
+  border: none;
+  border-radius: 0;
+  height: 450px;
+  margin-bottom: 20px;
+  background-color: white;
+}
+
+.postscontainer .card .card-header {
+  height: 250px !important;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.postscontainer .card .card-body {
+  padding: 10px;
+}
+
+.postscontainer .card .card-body .card-title {
+  font-size: 1.3rem;
+  margin-bottom: 0.3rem;
+}
+
+.postscontainer .card .card-body .card-title a {
+  color: black;
+  text-decoration: none;
+}
+
+.postscontainer .card .card-body .card-text {
+  font-size: 0.9rem !important;
+}
+
 body h1,
 body h2,
 body h3,
