--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,1 +1,29 @@
-
+.postscontainer {
+  .card {
+    border: none;
+    border-radius: 0;
+    height: 450px;
+    margin-bottom: 20px;
+    background-color: white;
+    .card-header {
+      height: 250px !important;
+      width: 100%;
+      background-size: cover;
+      background-position: center;
+    }
+    .card-body {
+      padding: 10px;
+      .card-title {
+        font-size: 1.3rem;
+        margin-bottom: 0.3rem;
+        a {
+          color: black;
+          text-decoration: none;
+        }
+      }
+      .card-text {
+        font-size: 0.9rem !important;
+      }
+    }
+  }
+}
