edited some styling, added image_url to posts

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,8 +1,8 @@
 .postscontainer {
   .card {
-    border: none;
-    border-radius: 0;
-    height: 450px;
+    //border: none;
+    //border-radius: 0;
+    height: 500px;
     margin-bottom: 20px;
     background-color: white;
     .card-header {
