--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,3 +1,25 @@
+.card {
+  .card-header {
+    background-color: #F8FAFC;
+    color: #C82B32;
+  }
+  .card-footer {
+    background-color: #F8FAFC;
+    color: #C82B32;
+  }
+}
+
+.fa {
+  //color: #FFD648 !important;
+  color: #C82B32 !important;
+}
+
+.jumbotron {
+  margin-bottom: 0 !important;
+  border-radius: 0 !important;
+  margin-top: 68px;
+}
+
 .postscontainer {
   .card {
     //border: none;
@@ -26,4 +48,22 @@
       }
     }
   }
+}
+
+.welcome {
+  background-color: #fff !important;
+
+  /*
+  .card {
+    border: 1px solid #A90B24;
+    .card-header {
+      background-color: #A90B24;
+      color: #FFD648;
+    }
+    .card-footer {
+      background-color: #A90B24;
+      color: #FFD648;
+    }
+  }
+  */
 }
