--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,9 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+$fa-font-path: "../../../node_modules/font-awesome/fonts" !default;
+
+@import 'node_modules/font-awesome/scss/font-awesome.scss';
 
 // Variables
 @import 'variables';
@@ -9,7 +12,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
-  background-color: #fff;
+  background-color: #F8FAFC;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
