--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13547,6 +13547,20 @@ a.text-dark:focus {
   margin-top: 68px;
 }
 
+.picturescontainer {
+  background-color: #C82B32;
+}
+
+.picturescontainer img {
+  width: 100%;
+  height: auto;
+}
+
+.picturescontainer .row {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 .postscontainer .card {
   height: 500px;
   margin-bottom: 20px;
