--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -20,6 +20,14 @@
   margin-top: 68px;
 }
 
+.picturescontainer {
+  background-color: #C82B32;
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 .postscontainer {
   .card {
     //border: none;
