--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,18 @@ $fa-font-path: "../../../node_modules/font-awesome/fonts" !default;
 .navbar-laravel {
   background-color: #F8FAFC;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+
+  #navbarCollapse {
+    li a {
+      color: #C82B32;
+    }
+  }
+}
+
+.active {
+  a {
+    color: black !important;
+  }
 }
 
 // Import a custom scss stylesheet
