refactored some inline styling to CSS utilities partial

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13545,14 +13545,21 @@ a.text-dark:focus {
   color: #C82B32;
 }
 
+.dx-nav-mt {
+  margin-top: 68px;
+}
+
 .fa {
   color: #C82B32 !important;
+}
+
+.jumbo-front-page {
+  min-height: 625px;
 }
 
 .jumbotron {
   margin-bottom: 0 !important;
   border-radius: 0 !important;
-  margin-top: 68px;
 }
 
 .picturescontainer {
