--- a/resources/sass/_utilities.scss
+++ b/resources/sass/_utilities.scss
@@ -15,6 +15,14 @@
   }
 }
 
+.dx-bg-white {
+  background-color: #fff;
+}
+
+.dx-border-eee {
+  border: 1px solid #eee;
+}
+
 .dx-nav-mt {
   margin-top: 68px;
 }
