refactored to remove more inline styling

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13561,8 +13561,17 @@ a.text-dark:focus {
   color: #C82B32 !important;
 }
 
+.image-full-w {
+  width: 100%;
+  height: auto;
+}
+
 .jumbo-front-page {
   min-height: 625px;
+}
+
+.jumbo-other-pages {
+  height: 350px;
 }
 
 .jumbotron {
